--- a/portfolio2.html
+++ b/portfolio2.html
@@ -655,7 +655,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 		<!--task design end -->
 
 		<!--study design start -->
-		<section id="study-design" class="study design">
+		<!--<section id="study-design" class="study design">
 			<div class="section-heading text-center">
 				<h2>study design</h2>
 			</div>
@@ -674,7 +674,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 													<h3>Qualtrics</h3>
 												</div><!--/.study design-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
@@ -693,7 +693,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 								</li>
 
 								<li>
-									<div class="single-timeline-box fix">
+									<!--<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
 												<div class="study design-time text-right">
@@ -701,7 +701,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 													<h3></h3>
 												</div><!--/.study design-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
@@ -720,7 +720,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 								</li>
 
 								<li>
-									<div class="single-timeline-box fix">
+									<!--<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
 												<div class="study design-time text-right">
@@ -728,7 +728,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 													<h3>Unity</h3>
 												</div><!--/.study design-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
@@ -747,7 +747,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 								</li>
 								
 								<li>
-									<div class="single-timeline-box fix">
+									<!--<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
 												<div class="study design-time text-right">
@@ -755,7 +755,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 													<h3></h3>
 												</div><!--/.study design-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
