--- a/portfolio2.html
+++ b/portfolio2.html
@@ -1199,10 +1199,10 @@ The power dynamics between Mike and Phil in the KN video contrast sharply with t
 		</section><!--/.quant-->
 		<!--Analysis of Power Relations end -->
 
-		<!--about qual -->
+		<!--about con -->
 		<section id="about" class="about">
 			<div class="section-heading text-center">
-				<h2>Qualitative Findings and Analysis</h2>
+				<h2>Conclusion</h2>
 			</div>
 			<div class="container">
 				<div class="about-content">
@@ -1282,7 +1282,7 @@ In conclusion, our analysis of the Knowledge Navigator video as design fiction h
 				</div>
 			</div>
 		</section><!--/.qual-->
-		<!--qual end -->
+		<!--con end -->
 
 		<!--about lessons -->
 		<section id="about" class="about">
