--- a/portfolio2.html
+++ b/portfolio2.html
@@ -1287,7 +1287,7 @@ In conclusion, our analysis of the Knowledge Navigator video as design fiction h
 		<!--about lessons -->
 		<section id="about" class="about">
 			<div class="section-heading text-center">
-				<h2>lessons learned</h2>
+				<h2>Contributions & lessons learned</h2>
 			</div>
 			<div class="container">
 				<div class="about-content">
@@ -1295,7 +1295,7 @@ In conclusion, our analysis of the Knowledge Navigator video as design fiction h
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									Among all the things I learned during this project, one of the most transformative was honing my time management skills. I balanced a wide range of tasks—from 3D modeling to game interaction development, literature review, and pilot tests—while continuously adapting my workflow to meet shifting priorities. Along the way, I gained valuable insights into working with human subjects, particularly in the intricate world of VR, where precision, attention to detail, and clear eligibility criteria are essential to ensure safety and reliable outcomes. Perhaps the most challenging and rewarding lesson was cultivating patience and consistency; recruiting and testing 71 participants, with each session taking about an hour, was demanding. Remaining as attentive and consistent with each participant, from the first to the last, required endurance, as the study spanned two months of daily sessions. This journey not only strengthened my skills but also deepened my passion for innovative, human-centered design and research.
+									My contributions to the project involved researching relevant references and frameworks, compiling a comprehensive list of theories related to our study, coding the transcript using the DiCoT framework, assisting with figure creation, and writing several sections of the paper. This experience highlighted the importance of synthesizing existing knowledge while remaining open to the ideas and perspectives of my fellow researchers, particularly when user testing or direct data collection is not part of the approach. In this context, the "users" were not recruited participants, but rather my teammates and the diverse research sources we reviewed. I also learned that thorough brainstorming and in-depth reading were crucial for navigating the many existing theories and identifying the most appropriate frameworks for our analysis.
 								</h3>
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
