--- a/portfolio2.html
+++ b/portfolio2.html
@@ -873,8 +873,7 @@ The Knowledge Navigator video, produced by Apple in 1987 for the Educom conferen
 							<div class="single-about-txt">
 								<h3>
 									
-To analyze the KN video, a log of events was created in a spreadsheet, including transcriptions of dialogue and notes on actors' behaviors. The dialogue, actions, and agent capabilities were coded using the DiCoT and HAT Game Analysis Framework, and events were categorized as feasible and common today, feasible but uncommon today, or not feasible today based on a comparison to current agents like Siri and trends in HCI research. The spreadsheet included timestamps, speaker identities, transcribed dialogue, corresponding actions, and triggers for those actions, with some cells left empty when no trigger was shown. Two authors transcribed the video and segmented the events, while two additional authors conducted quality checks to ensure consistency and accuracy in the coding.
-								</h3>
+To analyze the KN video, a log of events was created in a spreadsheet, including transcriptions of dialogue and notes on actors' behaviors. The dialogue, actions, and agent capabilities were coded using the DiCoT and HAT Game Analysis Framework, and events were categorized as feasible and common today, feasible but uncommon today, or not feasible today based on a comparison to current agents like Siri and trends in HCI research. The spreadsheet included timestamps, speaker identities, transcribed dialogue, corresponding actions, and triggers for those actions, with some cells left empty when no trigger was shown. 
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
 								</p>
