--- a/portfolio1.html
+++ b/portfolio1.html
@@ -157,7 +157,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+								<img src="assets/images/about/mirrorcondition.png" alt="mirrorcondition">
 								<!--<div class="about-list-icon">
 									<ul>
 										<!--<li>
