--- a/portfolio1.html
+++ b/portfolio1.html
@@ -1073,7 +1073,7 @@ Engagement: Guidance cues boosted engagement across all groups. Enjoyment was hi
 								</div>-->
 							</div>
 						</div>
-						<div class="col-sm-offset-1 col-sm-5">
+						<!--<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
 								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
 								<!--<div class="about-list-icon">
