--- a/portfolio1.html
+++ b/portfolio1.html
@@ -212,8 +212,8 @@ How can we help users navigate virtual reality without breaking their sense of i
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>Task design</h2>
-									<h3>Bachelor <span>of </span> Architecture</h3>
+									<h2></h2>
+									<h3> <span> </span> </h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -222,9 +222,9 @@ How can we help users navigate virtual reality without breaking their sense of i
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											Azad University
+											
 										</h4>
-										<h5>north carolina, USA</h5>-->
+										<h5></h5>
 										<p class="description">
 											3 key steps: selecting an environment, 3D modeling, equipment and interactions, conditions.
 										</p>
@@ -236,7 +236,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>Study Design</h2>
-									<h3>Master <span>of </span> Architecture</h3>
+									<h3><span> </span></h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -245,9 +245,9 @@ How can we help users navigate virtual reality without breaking their sense of i
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											Iowa State University
+											
 										</h4>
-										<h5>north carolina, USA</h5>-->
+										<h5></h5>
 										<p class="description">
 											X key steps: participant recruitment, setting, study introduction, practice session & task, survey. 
 										</p>
