--- a/portfolio1.html
+++ b/portfolio1.html
@@ -902,7 +902,7 @@ Key evaluation metrics included (1) frequency of task list checks, (2) total tas
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+								<img src="assets/images/sensory/quanttables.png" alt="quanttables_image">
 								<!--<div class="about-list-icon">
 									<ul>
 										<!--<li>
