--- a/portfolio1.html
+++ b/portfolio1.html
@@ -991,7 +991,7 @@ Engagement: Guidance cues boosted engagement across all groups. Enjoyment was hi
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+								<img src="assets/images/sensory/qualfigure.png" alt="qualfigure_image">
 								<!--<div class="about-list-icon">
 									<ul>
 										<!--<li>
