--- a/portfolio2.html
+++ b/portfolio2.html
@@ -901,7 +901,7 @@ To analyze the KN video, a log of events was created in a spreadsheet, including
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+								<img src="assets/images/kn/knmethod.png" alt="knmethod_image">
 								<!--<div class="about-list-icon">
 									<ul>
 										<!--<li>
