--- a/portfolio2.html
+++ b/portfolio2.html
@@ -986,7 +986,7 @@ The DiCoT framework was used to analyze the information flow between Mike and Ph
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+								<img src="assets/images/kn/dicot.png" alt="dicot_image">
 								<!--<div class="about-list-icon">
 									<ul>
 										<!--<li>
