--- a/portfolio2.html
+++ b/portfolio2.html
@@ -1070,7 +1070,7 @@ Using the HAT Game Analysis framework, the comparison between Phil and Siri high
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+								<img src="assets/images/kn/agentcapabilities.png" alt="agentcapabilities_image">
 								<!--<div class="about-list-icon">
 									<ul>
 										<!--<li>
