--- a/portfolio2.html
+++ b/portfolio2.html
@@ -1154,7 +1154,7 @@ The power dynamics between Mike and Phil in the KN video contrast sharply with t
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+								<img src="assets/images/kn/powerrelations.png" alt="powerrelations_image">
 								<!--<div class="about-list-icon">
 									<ul>
 										<!--<li>
