--- a/portfolio2.html
+++ b/portfolio2.html
@@ -1239,7 +1239,7 @@ In conclusion, our analysis of the Knowledge Navigator video as design fiction h
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+								<img src="assets/images/kn/con1.png" alt="con1_image">
 								<!--<div class="about-list-icon">
 									<ul>
 										<!--<li>
