--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							<div class="single-about-txt">
 								<h3>
 									
-As a passionate UX researcher and designer, my work is driven by an intellectual curiosity to deeply understand human experiences and interactions. With a multidisciplinary background in architecture, human-computer interaction, and immersive technologies, I specialize in human-centered research that considers the social, cultural, behavioral, and environmental factors shaping every experience. By integrating research-driven insights with creative design, I tackle complex challenges to craft innovative solutions that resonate deeply with users.
+As a passionate UX researcher and designer, my work is driven by an intellectual curiosity to understand human experiences and interactions. With a multidisciplinary background in architecture, human-computer interaction, and immersive technologies, I specialize in human-centered research that considers the social, cultural, behavioral, and environmental factors shaping experiences. 
 <br /><br />
 Currently, my research focuses on interpersonal communication dynamics between designers and engineers—a critical yet often overlooked area in both academia and industry. By identifying patterns and barriers, I aim to disrupt destructive communication cycles and foster more effective, inclusive collaboration. My broader mission is to create meaningful, user-centered solutions that transform the way people and teams engage with technology and with one another.
 								<!--<p>
