--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 									
 As a passionate UX researcher and designer, my work is driven by an intellectual curiosity to understand human experiences and interactions. With a multidisciplinary background in architecture, human-computer interaction, and immersive technologies, I specialize in human-centered research that considers the social, cultural, behavioral, and environmental factors shaping experiences. 
 <br /><br />
-Currently, my research focuses on interpersonal communication dynamics between designers and engineers—a critical yet often overlooked area in both academia and industry. By identifying patterns and barriers, I aim to disrupt destructive communication cycles and foster more effective, inclusive collaboration. My broader mission is to create meaningful, user-centered solutions that transform the way people and teams engage with technology and with one another.
+Currently, my research focuses on interpersonal communication dynamics between designers and engineers—a critical yet often overlooked area in both academia and industry. By identifying patterns and barriers, I aim to disrupt destructive communication cycles and foster more effective, inclusive collaboration. My mission is to create meaningful, user-centered, and AI-based solutions that transform how people and teams engage with technology and each other.
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
 								</p>
