--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</h4>
 										<!--<h5>north carolina, USA</h5>-->
 										<p class="description">
-											Focused on the fundamentals of architectural design, human-centered design principles, spatial experience, and construction methods.
+											Focused on the fundamentals of architectural design, human-centered design principles, spatial experience, construction methods, and innovative problem-solving approaches.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -295,7 +295,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</h4>
 										<!--<h5>bolton, united kingdome</h5>-->
 										<p class="description">
-											Exploring interpersonal communication dynamics between designers and engineers to foster effective, inclusive collaboration and create meaningful, user-centered solutions. 
+											Exploring interpersonal communication dynamics between designers and engineers to foster effective, inclusive collaboration and create meaningful, user-centered, AI-driven solutions.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
