--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</h4>
 										<!--<h5>bolton, united kingdome</h5>-->
 										<p class="description">
-											Exploring communication dynamics between designers and engineers to foster effective, inclusive collaboration and create meaningful, user-centered, AI-driven solutions.
+											Exploring communication dynamics between designers and engineers to foster effective and inclusive collaboration and create meaningful, user-centered, AI-driven solutions.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
