--- a/index.html
+++ b/index.html
@@ -687,6 +687,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="profile-txt">
 											<a href=""></a>
 											<div class="profile-icon-name">HCI International</div>
+											(Click to view)
 										</div>
 									</div>
 								</div>
@@ -701,6 +702,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="profile-txt">
 											<a href=""></a>
 											<div class="profile-icon-name">ANNSIM</div>
+											(Click to view)
 										</div>
 									</div>
 								</div>
@@ -715,6 +717,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<div class="profile-txt">
 											<a href=""></a>
 											<div class="profile-icon-name">HFES</div>
+											(Click to view)
 										</div>
 									</div>
 								</div>
