--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&sortby=pubdate&citation_for_view=8R1s_VIAAAAJ:u-x6o8ySG0sC" target="_blank">
 										<div class="single-profile-overlay">
-											<div class="profile-txt">
+											 <div class="profile-txt">
 												<div class="profile-icon-name">CHI</div>
 												(Click to view)
 											</div>
@@ -683,10 +683,10 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										<a href=""></a>
 										<div class="profile-icon-name">HCI International</div>
 									</div>
-									<div class="single-profile-overlay">
-										<div class="profile-txt">
-											<a href=""></a>
-											<div class="profile-icon-name">HCI International</div>
+									<a href="">https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&citation_for_view=8R1s_VIAAAAJ:u5HHmVD_uO8C" target="_blank">
+									        <div class="single-profile-overlay">
+										        <div class="profile-txt">
+											        <div class="profile-icon-name">HCI International</div>
 											(Click to view)
 										</div>
 									</div>
