--- a/index.html
+++ b/index.html
@@ -677,20 +677,20 @@ Currently, my research focuses on interpersonal communication dynamics between d
 									</a>
 									</div>
 								</div>
-							<div class="col-sm-3">
-								<div class="single-profile">
-									<div class="profile-txt">
-										<div class="profile-icon-name">HCI International</div>
-									</div>
-									<a href="">https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&citation_for_view=8R1s_VIAAAAJ:u5HHmVD_uO8C" target="_blank">
+							        <div class="col-sm-3">
+								        <div class="single-profile">
+									        <div class="profile-txt">
+										        <div class="profile-icon-name">HCI International</div>
+									        </div>
+									<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&citation_for_view=8R1s_VIAAAAJ:u5HHmVD_uO8C" target="_blank">
 									        <div class="single-profile-overlay">
-										        <div class="profile-txt">
+										         <div class="profile-txt">
 											        <div class="profile-icon-name">HCI International</div>
-											(Click to view)
-										</div>
-									</div>
-								</a>
-								</div>
+											        (Click to view)
+										         </div>
+									        </div>
+								        </a>
+								        </div>
 							</div>
 							<div class="col-sm-3">
 								<div class="single-profile">
