--- a/index.html
+++ b/index.html
@@ -691,22 +691,22 @@ Currently, my research focuses on interpersonal communication dynamics between d
 									        </div>
 								        </a>
 								        </div>
-							</div>
-							<div class="col-sm-3">
-								<div class="single-profile">
-									<div class="profile-txt">
-										<a href=""></a>
-										<div class="profile-icon-name">ANNSIM</div>
-									</div>
-									<div class="single-profile-overlay">
-										<div class="profile-txt">
-											<a href=""></a>
-											<div class="profile-icon-name">ANNSIM</div>
-											(Click to view)
-										</div>
-									</div>
-								</div>
-							</div>
+							        </div>
+							        <div class="col-sm-3">
+								        <div class="single-profile">
+									        <div class="profile-txt">
+										        <div class="profile-icon-name">ANNSIM</div>
+									        </div>
+								       <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&citation_for_view=8R1s_VIAAAAJ:9yKSN-GCB0IC">
+									       <div class="single-profile-overlay">
+										        <div class="profile-txt">
+											       <div class="profile-icon-name">ANNSIM</div>
+											       (Click to view)
+										        </div>
+									      </div>
+								      </a>
+								      </div>
+							        </div>
 							<div class="col-sm-3">
 								<div class="single-profile profile-no-border">
 									<div class="profile-txt">
