--- a/index.html
+++ b/index.html
@@ -707,19 +707,19 @@ Currently, my research focuses on interpersonal communication dynamics between d
 								      </a>
 								      </div>
 							        </div>
-							<div class="col-sm-3">
-								<div class="single-profile profile-no-border">
-									<div class="profile-txt">
-										<a href=""></a>
-										<div class="profile-icon-name">HFES</div>
-									</div>
-									<div class="single-profile-overlay">
-										<div class="profile-txt">
-											<a href=""></a>
-											<div class="profile-icon-name">HFES</div>
-											(Click to view)
-										</div>
-									</div>
+							        <div class="col-sm-3">
+								        <div class="single-profile profile-no-border">
+									        <div class="profile-txt">
+										        <div class="profile-icon-name">HFES</div>
+									        </div>
+									<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&citation_for_view=8R1s_VIAAAAJ:2osOgNQ5qMEC">
+									        <div class="single-profile-overlay">
+										        <div class="profile-txt">
+											       <div class="profile-icon-name">HFES</div>
+											       (Click to view)
+										        </div>
+									        </div>
+									</a>
 								</div>
 							</div>
 						</div>
