--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 									        <div class="profile-txt">
 										        <div class="profile-icon-name">ANNSIM</div>
 									        </div>
-								       <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&citation_for_view=8R1s_VIAAAAJ:9yKSN-GCB0IC">
+								       <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&citation_for_view=8R1s_VIAAAAJ:9yKSN-GCB0IC" target="_blank">
 									       <div class="single-profile-overlay">
 										        <div class="profile-txt">
 											       <div class="profile-icon-name">ANNSIM</div>
@@ -712,7 +712,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 									        <div class="profile-txt">
 										        <div class="profile-icon-name">HFES</div>
 									        </div>
-									<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&citation_for_view=8R1s_VIAAAAJ:2osOgNQ5qMEC">
+									<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&citation_for_view=8R1s_VIAAAAJ:2osOgNQ5qMEC" target="_blank">
 									        <div class="single-profile-overlay">
 										        <div class="profile-txt">
 											       <div class="profile-icon-name">HFES</div>
@@ -726,7 +726,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 						<div class="profile-border"></div>
 						<div class="row">
 							<div class="col-sm-offset-4 col-sm-4">
-								<div class="single-profile profile-no-border">
+								<div class="single-profile single-profile-left-border">
 									<div class="profile-txt">
 										<a href=""></a>
 										<div class="profile-icon-name">SimAUD</div>
@@ -821,22 +821,22 @@ Currently, my research focuses on interpersonal communication dynamics between d
 
 								<div class="col-sm-offset-2 col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												web design
-											</a>
-										</div><!-- /.isotope-overlay -->
+										<a href="./portfolio_one.html">
+											<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
+											<div class="isotope-overlay">
+													Individual Project
+											</div><!-- /.isotope-overlay -->
+										</a>
 									</div><!-- /.item -->
 								</div><!-- /.col -->
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												web design
-											</a>
-										</div><!-- /.isotope-overlay -->
+										<a href="./portfolio_two.html">
+											<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
+											<div class="isotope-overlay">
+													Group Project
+											</div><!-- /.isotope-overlay -->
+										</a>
 									</div><!-- /.item -->
 								</div><!-- /.col -->
 
