--- a/portfolio_one.html
+++ b/portfolio_one.html
@@ -14,7 +14,7 @@
 		rel="stylesheet">
 
 	<!-- title of site -->
-	<title>Hila Sabouni</title>
+	<title>Hila Sabouni - Individual Project</title>
 
 	<!-- For favicon png -->
 	<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
