--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 							<div class="col-md-6">
 								<div class="single-skill-content">
 									<div class="barWrapper">
-										<span class="progressText">Qualitative research</span>
+										<span class="progressText">Qualitative Research, Quantitative Analysis</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 												<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="">
@@ -330,7 +330,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">Quantitative research</span>
+										<span class="progressText">Thematic coding, Concept Mapping</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="">
@@ -341,7 +341,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">Thematic coding</span>
+										<span class="progressText">3D Modeling, Unity</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="">
@@ -352,7 +352,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">Blender</span>
+										<span class="progressText">idea generation, Concept diagramming, </span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="">
@@ -367,7 +367,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 							<div class="col-md-6">
 								<div class="single-skill-content">
 									<div class="barWrapper">
-										<span class="progressText">Idea Generation</span>
+										<span class="progressText">Problem Solving, Task Management</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 												<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="">
@@ -378,7 +378,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">Concept diagramming</span>
+										<span class="progressText">Project Planning, Time Management</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="">
@@ -389,7 +389,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">Project Planning and Time Management</span>
+										<span class="progressText">Team Leadership, Mentoring</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="">
@@ -400,7 +400,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText"> Cross-functional Teamwork</span>
+										<span class="progressText"> Cross-functional Teamwork, communication</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="">
