--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am hila <span>.</span>   </h2>
 							<p>a researcher, designer, and mentor</p>
-							<a href="assets/resume/Hila%20Sabouni%20-%20Resume.pdf" download>download resume</a>
+							<a href="assets/resume/Sabouni_Hila_Resume_UX.pdf" download>Check Out My Resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
@@ -832,7 +832,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 								<div class="col-sm-4">
 									<div class="item">
 										<a href="./portfolio_two.html">
-											<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
+											<img src="assets/images/portfolio/kn.jpg" alt="portfolio image"/>
 											<div class="isotope-overlay">
 													Group Project
 											</div><!-- /.isotope-overlay -->
