--- a/portfolio_one.html
+++ b/portfolio_one.html
@@ -82,9 +82,9 @@
 							<li class=" smooth-menu active"></li>
 							<li><a href="index.html">Home</a></li>
 							<li class="smooth-menu"><a href="#method">method</a></li>
-							<li class="smooth-menu"><a href="#task-design">task design</a></li>
-							<li class="smooth-menu"><a href="#study-design">study design</a></li>
-							<li class="smooth-menu"><a href="#analysis">Analysis</a></li>
+							<!-- <li class="smooth-menu"><a href="#task-design">task design</a></li> -->
+							<!-- <li class="smooth-menu"><a href="#study-design">study design</a></li> -->
+							<li class="smooth-menu"><a href="#analysis">Analysis & Results</a></li>
 							<li class="smooth-menu"><a href="#lessons_learned">Lessons Learned</a></li>
 							<li><a href="./portfolio_two.html">Portfolio two</a></li>
 						</ul><!--/.nav -->
@@ -153,9 +153,8 @@
 							<div class="timeline">
 								<div class="timeline-content">
 									<p class="description">
-										Three key steps including: selecting an environment, 3D modeling, equipment and
-										interactions,
-										conditions.
+										Five key steps including: 
+										<br />task, spatial environment, 3D modeling, equipment & interactions, and conditions.
 									</p>
 								</div>
 							</div>
@@ -173,7 +172,8 @@
 							<div class="timeline">
 								<div class="timeline-content">
 									<p class="description">
-										X key steps: participant recruitment, setting, study introduction, practice
+										Four key steps including: 
+										<br />participant recruitment, setting, study introduction, practice
 										session & task, survey.
 									</p>
 								</div>
@@ -542,13 +542,11 @@
 								honing my time management skills. I balanced a wide range of tasks—from 3D modeling to
 								game interaction development, literature review, and pilot tests—while continuously
 								adapting my workflow to meet shifting priorities.
-								<br />
+								<br /><br />
 								Along the way, I gained valuable
 								insights into working with human subjects, particularly in the intricate world of VR,
 								where precision, attention to detail, and clear eligibility criteria are essential to
-								ensure safety and reliable outcomes.
-								<br />
-								Perhaps the most challenging and rewarding lesson
+								ensure safety and reliable outcome. Perhaps the most challenging and rewarding lesson
 								was cultivating patience and consistency; recruiting and testing 71 participants, with
 								each session taking about an hour, was demanding. Remaining as attentive and consistent
 								with each participant, from the first to the last, required endurance, as the study
