--- a/portfolio_two.html
+++ b/portfolio_two.html
@@ -83,7 +83,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li class="smooth-menu"><a href="#method">method</a></li>
 							<li class="smooth-menu"><a href="#dicot">Analysis & Results</a></li>
-							<li class="smooth-menu"><a href="#conclusion">Conclusion</a></li>
+							<li class="smooth-menu"><a href="#conclusion">Takeaway</a></li>
 							<li class="smooth-menu"><a href="#contribution">Contribution</a></li>
 							<li><a href="./portfolio_one.html">Portfolio One</a></li>
 						</ul><!--/.nav -->
@@ -100,7 +100,8 @@
 
 	<section id="about" class="about">
 		<div class="section-heading text-center">
-			<h2>Why Doesn’t that Conversational Agent Exist Yet? </h2>
+			<h2>Why Doesn’t that Conversational Agent Exist Yet?</h2>
+				<p style="font-family: 'YourFontName'; font-size: 1.2em;">(CHI 2024 Honorable Award Winner)</p>
 		</div>
 		<div class="container">
 			<div class="about-content">
@@ -337,7 +338,7 @@
 
 	<section id="conclusion" class="about">
 		<div class="section-heading text-center">
-			<h2>Conclusion</h2>
+			<h2>Takeaway</h2>
 		</div>
 		<div class="container">
 			<div class="about-content">
@@ -406,13 +407,7 @@
 							</h3>
 							<br />
 							<h3>
-								This experience highlighted the importance of synthesizing existing
-								knowledge while remaining open to the ideas and perspectives of my fellow researchers,
-								particularly when user testing or direct data collection is not part of the approach. In
-								this context, the "users" were not recruited participants, but rather my teammates and
-								the diverse research sources we reviewed. I also learned that thorough brainstorming and
-								in-depth reading were crucial for navigating the many existing theories and identifying
-								the most appropriate frameworks for our analysis.
+								When direct data collection is not part of the research plan, ensuring accurate interpretations from secondary resources like videos can be particularly challenging. In this project, collaboration proved essential. Each team member meticulously analyzed the video, watching it countless times from different angles to uncover nuances and perspectives. We then came together to align our interpretations, share insights, and address discrepancies. Guided by advisors and supported by multiple analysis frameworks, we gradually refined our understanding, reaching a point where our analysis felt robust enough to guide further research. This process demanded extensive reading, active listening, and deep critical thinking, all of which contributed to the development of our educational interpretation skills in ways that other common research methods never could.
 							</h3>
 						</div>
 					</div>
