--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">idea generation, Concept diagramming, </span>
+										<span class="progressText">idea generation, Concept diagramming </span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="">
@@ -529,7 +529,7 @@ Currently, my research focuses on interpersonal communication dynamics between d
 														</h4>
 														<h5>Iowa State University, AI, USA</h5>
 														<p class="description">
-															Instructed second-year undergraduate architecture students in a 6-credit studio course, holding weekly desk crits, midterm and final reviews, and participating in field trips with over 100 students to Chicago and Columbus, Indiana each semester. 
+															Instructed second-year undergraduate architecture students in a 6-credit studio course, holding weekly desk crits, midterm and final reviews, and participating in field trips with over 100 students to Chicago, IL and Columbus, IN each semester. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -608,9 +608,9 @@ Currently, my research focuses on interpersonal communication dynamics between d
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 															Klingner & Associates, PC 
 														</h4>
-														<h5>Pella, AI, USA</h5>
+														<h5>Pella, IA, USA</h5>
 														<p class="description">
-															Engaged in the site visit, design, and construction phases of four projects, producing technical drawings and 3D models, and collaborating in client meetings to listen to and document their requirements and desires. 
+															Engaged in the site visit, design, and construction phases of four projects, produced technical drawings and 3D models, and collaborated in client meetings to listen to and document their requirements and desires. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
