--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 							<div class="single-about-txt">
 								<h3>
 									
-As a passionate UX researcher and designer, my work is driven by an intellectual curiosity to understand human experiences and interactions. With a multidisciplinary background in architecture, human-computer interaction, and immersive technologies, I specialize in human-centered research that considers the social, cultural, behavioral, and environmental factors shaping experiences. 
+As a UX researcher and designer, I explore how people understand and engage with AI. My background in architecture, human–computer interaction, and immersive technology shapes a multidisciplinary approach to studying experience at the intersection of design, engineering, and intelligent systems. I focus on uncovering the social, cultural, and behavioral factors that influence how people adopt and interact with emerging technology. 
 <br /><br />
-Currently, my research focuses on interpersonal communication dynamics between designers and engineers—a critical yet often overlooked area in both academia and industry. By identifying patterns and barriers, I aim to disrupt destructive communication cycles and foster more effective, inclusive collaboration. My mission is to create meaningful, user-centered, and AI-based solutions that transform how people and teams engage with technology and each other.
+My current research examines how designers and engineers form mental models of AI, particularly tools like ChatGPT, and how these models affect communication, decision-making, and collaboration. By analyzing prompting strategy, interaction dynamic, and adoption pattern, I develop frameworks that make human–AI interaction more intuitive, effective, and impactful. My goal is to guide the creation of user-centered, AI-driven solutions for the future.
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
 								</p>
