--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ My current research examines how designers and engineers form mental models of A
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2023 - 2026(expected)</h2>
+									<h2>2023 - 2027(expected)</h2>
 									<h3>PhD <span>in </span> HCI</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
@@ -295,7 +295,7 @@ My current research examines how designers and engineers form mental models of A
 										</h4>
 										<!--<h5>bolton, united kingdome</h5>-->
 										<p class="description">
-											Exploring communication dynamics between designers and engineers to foster effective and inclusive collaboration and create meaningful, user-centered, AI-driven solutions.
+											Studying designer and engineer mental models of AI to improve communication, decision-making, and collaboration, and to create user-centered, AI-driven solutions.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -435,7 +435,7 @@ My current research examines how designers and engineers form mental models of A
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>2023 – 2026</h2>
+													<h2>2023 – 2027</h2>
 													<h3>UX researcher & designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
