--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ My current research examines how designers and engineers form mental models of A
 														</h4>
 														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
-															Collaborating with experts in HCI, computer science, architecture, and communication studies to design experiments that uncover designer-engineer interpersonal communication patterns, with the ultimate goal of developing an AI-based tool to enhance cross-functional teamwork. 
+															Researching designer and engineer mental models of AI, with emphasis on ChatGPT, through surveys, interviews, and experiments. Collaborating with experts in HCI, computer science, architecture, and communication studies to uncover how professional background shapes AI understanding, communication, and collaboration, with the goal of developing frameworks that enhance cross-functional teamwork with AI.
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
