--- a/index.html
+++ b/index.html
@@ -435,6 +435,33 @@ My current research examines how designers and engineers form mental models of A
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
+													<h2>Summer 2025</h2>
+													<h3>UX researcher</h3>
+												</div><!--/.experience-time-->
+											</div><!--/.col-->
+											<div class="col-md-offset-1 col-md-5">
+												<div class="timeline">
+													<div class="timeline-content">
+														<h4 class="title">
+															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+															Rocket Mortgage
+														</h4>
+														<h5>Detroit, MI, USA</h5>
+														<p class="description">
+															Benchmarked Qualtrics Text iQ against ChatGPT for qualitative data tagging and sentiment analysis, demonstrating ChatGPT's superior performance through prompt engineering. Developed a reusable framework for research tasks, analyzed NPS shifts across clients, and delivered product recommendations to improve the digital mortgage journey. Won "Best Use of AI for Discovery & Research" at a company-wide hackathon.
+														</p>
+													</div><!--/.timeline-content-->
+												</div><!--/.timeline-->
+											</div><!--/.col-->
+										</div>
+									</div><!--/.single-timeline-box-->
+								</li>
+
+								<li>
+									<div class="single-timeline-box fix">
+										<div class="row">
+											<div class="col-md-5">
+												<div class="experience-time text-right">
 													<h2>2023 – 2027</h2>
 													<h3>UX researcher & designer</h3>
 												</div><!--/.experience-time-->
