--- a/index.html
+++ b/index.html
@@ -692,6 +692,21 @@ My current research examines how designers and engineers form mental models of A
 								<div class="col-sm-3">
 									<div class="single-profile">
 										<div class="profile-txt">
+											<div class="profile-icon-name">Electronic Imaging Symposium</div>
+										</div>
+									<a href="https://library.imaging.org/jpi/articles/8/0/000403" target="_blank">
+										<div class="single-profile-overlay">
+											 <div class="profile-txt">
+												<div class="profile-icon-name">Electronic Imaging Symposium</div>
+												(Click to view)
+											</div>
+										</div>
+									</a>
+									</div>
+								</div>
+								<div class="col-sm-3">
+									<div class="single-profile">
+										<div class="profile-txt">
 											<div class="profile-icon-name">CHI</div>
 										</div>
 									<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=8R1s_VIAAAAJ&sortby=pubdate&citation_for_view=8R1s_VIAAAAJ:u-x6o8ySG0sC" target="_blank">
