--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ My current research examines how designers and engineers form mental models of A
 											<div class="col-md-5">
 												<div class="experience-time text-right">
 													<h2>Summer 2025</h2>
-													<h3>Customer Experience Analyst Intern</h3>
+													<h3>UC researcher</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -444,7 +444,7 @@ My current research examines how designers and engineers form mental models of A
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Rocket Mortgage
+															Customer Experience Analyst Intern
 														</h4>
 														<h5>Rocket Mortgage, Detroit, MI, USA</h5>
 														<p class="description">
