article updates- line

--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@ My current research examines how designers and engineers form mental models of A
 									</div>
 								</div>
 							        <div class="col-sm-4">
-								        <div class="single-profile">
+								        <div class="single-profile profile-no-border">
 									        <div class="profile-txt">
 										        <div class="profile-icon-name">HCI International</div>
 									        </div>
@@ -769,7 +769,7 @@ My current research examines how designers and engineers form mental models of A
 							       </div>
 							</div>
 							<div class="col-sm-4">
-								<div class="single-profile">
+								<div class="single-profile profile-no-border">
 									<div class="profile-txt">
 										<div class="profile-icon-name">SimAUD</div>
 									</div>
