--- a/index.html
+++ b/index.html
@@ -689,6 +689,8 @@ My current research examines how designers and engineers form mental models of A
 				<div class="container">
 					<div class="profiles-content">
 						<div class="row">
+							<div class="col-md-offset-6 col-md-5">
+								<div class="row">
 								<div class="col-sm-4">
 									<div class="single-profile">
 										<div class="profile-txt">
@@ -822,6 +824,8 @@ My current research examines how designers and engineers form mental models of A
 									</div>
 								</div>
 							</div>-->
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
