--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@ My current research examines how designers and engineers form mental models of A
 								</div>
 							</div>
 						</div>
-						<hr style="margin: 5px 0; border: 0; border-top: 1px solid #ddd;">
+						<hr style="margin: 3px 0; border: 0; border-top: 0 solid #ddd;">
 						<div class="row">
 							<div class="col-sm-4">
 								<div class="single-profile">
